feat(generation): implement LLM generation pipeline (P04.9)