@@ -4,45 +4,162 @@ Current Version
 
 v0.5.0 (In Progress)
 
-Completed
+---
 
-- P04.1 Retrieval Foundation
-- P04.2 Vector Retrieval
-- P04.3 PostgreSQL BM25 Retrieval
-- P04.4 Reciprocal Rank Fusion
-- P04.AC1 Single Embedding Pipeline
-- P04.5 Hybrid Retrieval
-- P04.6 Query Rewriting
-- P04.7 Context Assembly
-- P04.8 Prompt Builder
+## Completed Milestones
 
-Current Test Count
+| Milestone | Description                        | New Tests | Status     |
+|-----------|------------------------------------|-----------|------------|
+| P04.1     | Retrieval Foundation               | —         | ✅ Complete |
+| P04.2     | Vector Retrieval                   | —         | ✅ Complete |
+| P04.3     | PostgreSQL BM25 Retrieval          | —         | ✅ Complete |
+| P04.4     | Reciprocal Rank Fusion             | —         | ✅ Complete |
+| P04.AC1   | Single Embedding Pipeline          | +10       | ✅ Complete |
+| P04.5     | Hybrid Retrieval                   | +16       | ✅ Complete |
+| P04.6     | Query Rewriting                    | +21       | ✅ Complete |
+| P04.7     | Context Assembly                   | +28       | ✅ Complete |
+| P04.8     | Prompt Builder                     | +50       | ✅ Complete |
+| P04.9     | Chat Generation (LLM + Guardrails) | +82       | ✅ Complete |
 
-331 Passing
+**Total tests: 413 — 0 failures**
 
-Current Milestone
+---
 
-P04.8 Complete
+## Current Milestone
 
-Next Milestone
+**P04.10 — Conversation Memory** ← next to implement
 
-P04.9 Chat Generation (LlmPort + OllamaLlmAdapter)
+---
 
-Notes
+## Architecture Notes
 
 Architecture is frozen.
 
 Security layer (Authorization Filter) is planned but not implemented.
 
-ContextAssemblyPort returns AssembledContext (not String) — citation metadata is preserved.
-DefaultContextAssemblyAdapter is pure Java with no LLM dependency.
-Token estimation uses 4-chars-per-token heuristic.
+### Frozen ADRs
 
-PromptBuilderPort signature is frozen: PromptRequest build(PromptBuildRequest request).
-PromptBuildRequest is the single input model — port signature never changes (ADR G08).
-PromptRequest is provider-independent — no Spring AI types (ADR G01).
-originalQueryText is always the user's verbatim question, never the rewritten form (ADR G02).
-SOURCE markers are 1-based: [SOURCE:N] where N = chunk.position() + 1 (ADR G03).
-Prompt template loaded from classpath:prompts/qa-system.txt at startup; missing template = fast fail (ADR G06).
-memoryMessages and tools are List.of() today; populated in P04.10 and agent milestone without port-signature change.
-TemplateBasedPromptBuilderAdapter is stateless — same inputs always produce same output (ADR G04).
+| ADR  | Decision                                                                                          |
+|------|---------------------------------------------------------------------------------------------------|
+| G01  | `PromptBuilderPort` returns `PromptRequest` (provider-independent); LLM adapter converts         |
+| G02  | `PromptRequest.userText` is the original verbatim query, never the rewritten retrieval form       |
+| G03  | Source markers are 1-based: `[SOURCE:N]` where N = chunk.position() + 1                          |
+| G04  | `TemplateBasedPromptBuilderAdapter` is stateless — same inputs always produce same output         |
+| G05  | `PromptBuilderPort` signature frozen; future params travel inside `PromptBuildRequest`            |
+| G06  | System prompt template at `classpath:prompts/qa-system.txt`; missing = fail fast at startup      |
+| G07  | `ToolDefinition` is a stub passthrough for P04.8/P04.9; no execution occurs                      |
+| G08  | `PromptBuildRequest` is the single frozen input to `PromptBuilderPort`                            |
+| G09  | `LlmPort.generate()` takes `LlmRequest` (wraps `PromptRequest` + `GenerationOptions`)            |
+| G10  | `LlmResponse` fields: generatedText, finishReason, modelName, promptTokens, completionTokens, latencyMs |
+| G11  | `LlmPort` is synchronous; streaming deferred to future `StreamingLlmPort`                         |
+| G12  | `LlmException` base in domain; infrastructure subtypes in `infrastructure.llm.exception`         |
+| G13  | Retry logic belongs inside the provider adapter, not `GenerationService`                          |
+| G14  | `GenerationOptions.DEFAULT` = (maxTokens=2048, temperature=0.1, topP=1.0, modelNameOverride=null) |
+| G15  | Multi-model routing via future `RoutingLlmAdapter` pattern (mirrors `HybridRetrievalAdapter`)    |
+| G16  | `OutputGuardrailsPort` receives text only; `CitationPort` receives text + `AssembledContext`     |
+
+---
+
+## Generation Pipeline (P04.9)
+
+```
+GenerationRequest
+       │
+       ▼
+PromptBuilderPort.build()           ← TemplateBasedPromptBuilderAdapter
+       │ PromptRequest
+       ▼
+LlmPort.generate()                  ← OllamaLlmAdapter
+       │ LlmResponse
+       ▼
+OutputGuardrailsPort.apply()        ← PassthroughOutputGuardrailsAdapter (seam → P04.11)
+       │ GuardrailResult
+       ▼
+CitationPort.resolve()              ← PassthroughCitationAdapter (seam → P04.11)
+       │ List<Citation>
+       ▼
+GeneratedResponse
+```
+
+`memoryMessages` and `tools` are empty `List.of()` stubs; populated in P04.10 and agent milestone respectively, without changing port signatures.
+
+---
+
+## Infrastructure Wiring
+
+- `HybridRetrievalAdapter` is `@Primary`; `WeaviateRetrievalAdapter` is `@Qualifier("vectorRetrieval")`; `PostgresBm25RetrievalAdapter` is `@Qualifier("bm25Retrieval")`
+- `OllamaLlmAdapter` is the sole `LlmPort` implementation
+- `PassthroughOutputGuardrailsAdapter` implements `OutputGuardrailsPort` (always PASS — seam for P04.11)
+- `PassthroughCitationAdapter` implements `CitationPort` (always empty list — seam for P04.11)
+
+---
+
+## Package Structure (production code)
+
+```
+com.mudassir.eka
+├── domain
+│   ├── chunk                        — ChunkId, Chunk
+│   ├── conversation                 — Message, MessageRole, Citation
+│   ├── document                     — DocumentId, Document
+│   ├── generation
+│   │   ├── exception                — LlmException
+│   │   ├── model                    — FinishReason, GenerationOptions, LlmRequest, LlmResponse,
+│   │   │                              GuardrailStatus, GuardrailResult, GeneratedResponse,
+│   │   │                              PromptBuildRequest, PromptRequest, ToolDefinition
+│   │   └── port                     — LlmPort, OutputGuardrailsPort, CitationPort, PromptBuilderPort
+│   ├── retrieval
+│   │   ├── model                    — RetrievalOptions, RetrievedChunk, RetrievalResult,
+│   │   │                              SearchMetadata, AssembledChunk, AssembledContext
+│   │   └── port                     — RetrievalPort, RankingPort, QueryRewritePort, ContextAssemblyPort
+│   └── shared                       — TenantId
+├── application
+│   ├── generation                   — GenerationRequest, GenerationException, GenerationService
+│   └── retrieval                    — RetrievalRequest, RetrievalException,
+│                                      InvalidRetrievalRequestException, RetrievalService
+└── infrastructure
+    ├── citation                     — PassthroughCitationAdapter
+    ├── guardrails                   — PassthroughOutputGuardrailsAdapter
+    ├── llm
+    │   ├── exception                — LlmTimeoutException, LlmRateLimitException,
+    │   │                              LlmProviderUnavailableException, LlmInvalidResponseException,
+    │   │                              LlmModelNotFoundException
+    │   └── ollama                   — OllamaLlmAdapter
+    ├── prompt                       — TemplateBasedPromptBuilderAdapter
+    ├── query.rewrite                — OllamaQueryRewriteAdapter, QueryRewriteException
+    └── retrieval
+        ├── hybrid                   — HybridRetrievalAdapter, HybridRetrievalException
+        ├── postgres                 — PostgresBm25RetrievalAdapter, Bm25MetadataFilterTranslator,
+        │                              Bm25ScoreNormalizer
+        ├── ranking                  — RrfRankingAdapter
+        └── weaviate                 — WeaviateRetrievalAdapter, WeaviateVectorStoreAdapter
+```
+
+---
+
+## Build Tool
+
+Gradle 8.12 — no `gradlew` wrapper present.
+
+Binary: `~/.gradle/wrapper/dists/gradle-8.12-bin/cetblhg4pflnnks72fxwobvgv/gradle-8.12/bin/gradle`
+
+Java 21 with `--enable-preview` in compiler and test JVM args.
+
+---
+
+## Security / Logging Policy
+
+Architecture constraint — enforced across all milestones:
+
+| Data           | Allowed |
+|----------------|---------|
+| Tenant ID      | DEBUG / WARN / ERROR |
+| Model name     | DEBUG |
+| Finish reason  | DEBUG |
+| Token counts   | DEBUG |
+| Latency ms     | DEBUG |
+| System text    | NEVER |
+| User query     | NEVER |
+| Chunk content  | NEVER |
+| Generated text | NEVER |
+| Prompt content | NEVER |
